--- a/language/th.json
+++ b/language/th.json
@@ -3,6 +3,7 @@
   "info_lang_select_hint": "Select Language",
   "info_lang_select_label": "Poll Language:",
   "info_anonymous": ":shushing_face: โหวตแบบไม่ระบุตัวตน",
+  "info_anonymous_notice": "NOTE: ผู้สร้างคำถามยังสามารถเห็นว่าใครเลือกตัวเลือกใหนได้!",
   "info_limited": ":pencil2: กรุณาเลือก `{{limit}}` ตัวเลือก",
   "info_s": "",
   "info_hidden": ":ninja: ไม่เปิดเผยผลโหวต",
@@ -25,9 +26,9 @@
   "btn_create": "Create(สร้าง)",
   "btn_cancel": "Cancel(ยกเลิก)",
   "menu_text": "Menu(สำหรับคนถาม)",
-  "menu_close_poll": "Close the poll",
-  "menu_reopen_poll": "Reopen the poll",
-  "menu_delete_poll": "Delete the poll",
+  "menu_close_poll": "Close the poll(ปิดโหวด)",
+  "menu_reopen_poll": "Reopen the poll(เปิดโหวด)",
+  "menu_delete_poll": "Delete the poll(ลบออก)",
   "menu_reveal_vote": "เปิดเผยผลโหวต",
   "menu_hide_vote": "ซ่อนผลโหวต",
   "menu_all_user_vote": "ดูผลโหวดทั้งหมด",
@@ -45,9 +46,9 @@
   "modal_create_poll": "กรุณาใส่ข้อมูลด้านล่างเพื่อสร้างคำถามใหม่:",
   "modal_option": "ตัวเลือก:",
   "modal_option_anonymous": "*Anonymous* (ไม่ระบุตัวตน)",
-  "modal_option_anonymous_hint": "*เมื่อเลือก ผลโหวตจะแต่จำนวนไม่มีชื่อผู้เลือก*",
+  "modal_option_anonymous_hint": "*เมื่อเลือก ผลโหวตจะแสดงแต่จำนวนไม่มีชื่อผู้เลือก*",
   "modal_option_limited": "*Limited* (จำกัดจำนวนที่เลือกได้)",
-  "modal_option_limited_hint": "*This option limit the number of choices by user*",
+  "modal_option_limited_hint": "*เมื่อเลือก จะสามารถกำหนดได้ว่าแต่ละคนเลือกได้กี่ตัวเลือก*",
   "modal_option_hidden": "*Hidden* (ไม่เปิดเผยผลโหวต)",
   "modal_option_hidden_hint": "*เมื่อเลือก จะไม่เปิดเผยผลโหวตจนว่าจะเลือกเปิดเผยผลโหวต(Reveal votes)*",
   "modal_option_add_choice": "ให้ผู้อื่นเพิ่มตัวเลือกเองได้",
@@ -57,12 +58,12 @@
   "modal_input_question_text": "Ask your question (คำถามที่จะถาม):",
   "modal_input_question_hint": "Write your question (ใส่คำถาม)",
   "modal_input_choice_text": "*Create your choice (ตัวเลือก):*",
-  "modal_input_choice_add": "+ Add a choice (เพื่มตัวเลือก)",
+  "modal_input_choice_add": "+ Add a choice (เพิ่มตัวเลือก)",
   "modal_input_choice": "Write your choice (ใส่ตัวเลือก)",
   "modal_ch_manual_select": "Select a channel to post poll (จะถามลงห้องใหน?)",
   "modal_ch_select": "Select a channel",
   "modal_ch_response_url": "response_url :",
-  "modal_ch_response_url_auto": "คำถามนี้จะถูกถามลงในห้องห้องปัจจุบัน",
+  "modal_ch_response_url_auto": "คำถามนี้จะถูกถามลงในห้องปัจจุบัน",
   "modal_ch_response_url_hint": ":warning: กรุณาอย่าเปลี่ยนข้อความด้านบน :warning:\nโดยคำถามนี้จะถูกถามลงในห้องห้องปัจจุบัน.",
   "modal_ch_warn": ":warning: หากห้องที่เลือกเป็นรูปกุณแจให้ปิดหน้าต่างนี้แล้ว พิมพ์ @{{bot_name}} และกด Invite เพื่อให้ตัวสร้างคำถามเข้าไปอยู่ในห้องก่อน",
   "modal_ch_warn_with_response_url": ":warning: คุณไม่ได้พิมพ์ /{{slack_command}} ลงในห้องที่จะสร้างคำถาม\nกรุณาเลือกชื่อห้องจากด้านบน\nหากห้องที่เลือกเป็นรูปกุณแจให้ปิดหน้าต่างนี้แล้ว พิมพ์ @{{bot_name}} และกด Invite เพื่อให้ตัวสร้างคำถามเข้าไปอยู่ในห้องก่อน\n หรือใช้วิธีพิมพ์ /{{slack_command}} ในห้องที่จะสร้างคำถามก็ได้",
@@ -74,6 +75,7 @@
   "err_delete_other": "คุณไม่สามารถ[ลบ]คำถามที่สร้างโดยผู้อื่นได้",
   "err_reveal_other": "คุณไม่สามารถ[เปิดเผย]คำถามที่สร้างโดยผู้อื่นได้",
   "err_see_all_vote_other": "คุณไม่สามารถ[ดูผลโหวตผู้อื่น]ของคำถามที่สร้างโดยผู้อื่นได้",
+  "err_see_all_vote_true_anonymous": "ไม่สามารถ[ดูผลโหวตผู้อื่น]ได้. เนื่องจากเป็นคำถามแบบ `Anonymous(ไม่ระบุตัวตน)` และตัวเลือก `True Anonymous` ถูกเปิดอยู่",
   "err_poll_too_old": "คำถามของคุณเก่าเกินไป กรุณาสร้างใหม่",
   "err_vote_over_limit": "คุณเลือกครบ `{{limit}}` ตัวเลือกแล้วหากต้องการเปลี่ยนให้กดตัวเลือกที่เลือกไปแล้วออกก่อน",
   "err_vote_exception": "เกิดข้อผิดพลาดกรุณาลองใหม่อีกครั้ง/An error occurred during vote processing. Please try again in few seconds.",
@@ -82,9 +84,10 @@
   "err_poll_hide_exception": "เกิดข้อผิดพลาดกรุณาลองใหม่อีกครั้ง/An error occurred during hide processing. Please try again in few seconds.",
   "err_poll_reveal_exception": "เกิดข้อผิดพลาดกรุณาลองใหม่อีกครั้ง/An error occurred during reveal processing. Please try again in few seconds.",
   "err_poll_unconsistent_exception": "เกิดข้อผิดพลาดกรุณาลองใหม่อีกครั้ง/Unconsistent poll data",
-  "err_poll_ch_exception": ":warning::warning:\nไม่สามารถตรวจสอบได้ว่าจะสามารถสร้างคำถามในห้องที่เลือกได้หรือไม่\nคุณอาจจะลองใหม่เลือกห้องใหม่อีกครั้งก็ได้.",
+  "err_poll_ch_exception": ":warning::warning:\nไม่สามารถตรวจสอบได้ว่าจะสามารถสร้างคำถามในห้องที่เลือกได้หรือไม่.",
   "err_duplicate_add_choice": "มีตัวเลือก [{{text}}] อยู่แล้ว",
   "err_process_command": "เกิดข้อผิดพลาดขณะประมวลผลคำสั่ง กรุณาตรวจสอบว่าคำสั่งถูกต้อง",
+  "err_invalid_command": "คำสั่งไม่ถูกต้อง, ชุดคำสั่ง (ยกเว้นคำถามและตัวเลือก) อาจจะมี *bold* ~strike~ _italics_ หรือ `code` ติดอยู่กรุณาตรวจสอบอีกครั้ง",
   "err_only_installer": "Only user that install this app can use this command",
   "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock. (กรุณารอสักครู่และลองใหม่)",
   "emoji_1": ":one:",
@@ -96,5 +99,7 @@
   "emoji_7": ":seven:",
   "emoji_8": ":eight:",
   "emoji_9": ":nine:",
-  "emoji_10": ":keycap_ten:"
+  "emoji_10": ":keycap_ten:",
+  "emoji_11": ":one::one:",
+  "emoji_12": ":one::two:"
 }
