Command to create poll in Menu, Default show_command_info to false as you can always access it from Menu

--- a/language/de.json
+++ b/language/de.json
@@ -19,10 +19,13 @@
   "info_need_help": "Brauchen Sie Hilfe?",
   "info_create_poll": "Eine Umfrage erstellen",
   "info_command_source": ":information_source:",
+  "info_command_source_text": "Befehl zum Erstellen dieser Umfrage:",
   "info_others_add_choice": "Weitere Option hinzufügen...",
   "info_others_add_choice_hint": "Geben Sie hier Ihre neue Option ein",
   "btn_vote": "Abstimmen",
   "btn_add_choice": "+ Option hinzufügen",
+  "btn_ok": "OK",
+  "btn_close": "Schließen",
   "btn_create": "Erstellen",
   "btn_cancel": "Abbrechen",
   "menu_text": "Menü",
@@ -35,6 +38,7 @@
   "menu_poll_action": "Umfrageaktionen",
   "menu_user_action": "Benutzeraktionen",
   "menu_user_self_vote": "Ihre Stimmen anzeigen",
+  "menu_command_info": "Command Info.",
   "menu_support": "Unterstützung",
   "menu_support_love_app": ":heart: Sie lieben die App?",
   "menu_support_contribute": ":technologist: Beitrag dazu leisten",
