--- a/language/en.json
+++ b/language/en.json
@@ -19,10 +19,13 @@
   "info_need_help": "Need help ?",
   "info_create_poll": "Create a poll",
   "info_command_source": ":information_source:",
+  "info_command_source_text": "Command to create this poll:",
   "info_others_add_choice": "Add another choice...",
   "info_others_add_choice_hint": "Type your new choice here",
   "btn_vote": "Vote",
   "btn_add_choice": "+ Add choice",
+  "btn_ok": "OK",
+  "btn_close": "Close",
   "btn_create": "Create",
   "btn_cancel": "Cancel",
   "menu_text": "Menu",
@@ -35,6 +38,7 @@
   "menu_poll_action": "Poll actions",
   "menu_user_action": "User actions",
   "menu_user_self_vote": "See your votes",
+  "menu_command_info": "Command Info.",
   "menu_support": "Support",
   "menu_support_love_app": ":heart: You love the app ?",
   "menu_support_contribute": ":technologist: Contribute on it",
