--- a/language/es.json
+++ b/language/es.json
@@ -19,10 +19,13 @@
   "info_need_help": "¿Necesitas ayuda?",
   "info_create_poll": "Crear una encuesta",
   "info_command_source": ":information_source:",
+  "info_command_source_text": "Comando para crear esta encuesta:",
   "info_others_add_choice": "Agregar otra opción...",
   "info_others_add_choice_hint": "Escriba su nueva opción aquí",
   "btn_vote": "Votar",
   "btn_add_choice": "+ Agregar opción",
+  "btn_ok": "OK",
+  "btn_close": "Cerrar",
   "btn_create": "Crear",
   "btn_cancel": "Cancelar",
   "menu_text": "Menú",
@@ -35,6 +38,7 @@
   "menu_poll_action": "Acciones de encuesta",
   "menu_user_action": "Acciones de usuario",
   "menu_user_self_vote": "Ver tus votos",
+  "menu_command_info": "Command Info.",
   "menu_support": "Apoyo",
   "menu_support_love_app": ":heart: ¿Te encanta la aplicación?",
   "menu_support_contribute": ":technologist: Contribuir en ello",
