--- a/language/fr.json
+++ b/language/fr.json
@@ -19,10 +19,13 @@
   "info_need_help": "Besoin d'aide ?",
   "info_create_poll": "Créer un sondage",
   "info_command_source": ":information_source:",
+  "info_command_source_text": "Commande pour créer ce sondage:",
   "info_others_add_choice": "Ajouter une autre option...",
   "info_others_add_choice_hint": "Saisissez votre nouvelle option ici",
   "btn_vote": "Voter",
   "btn_add_choice": "+ Ajouter une option",
+  "btn_ok": "OK",
+  "btn_close": "Fermer",
   "btn_create": "Créer",
   "btn_cancel": "Annuler",
   "menu_text": "Menu",
@@ -35,6 +38,7 @@
   "menu_poll_action": "Actions du sondage",
   "menu_user_action": "Actions de l'utilisateur",
   "menu_user_self_vote": "Voir vos votes",
+  "menu_command_info": "Command Info.",
   "menu_support": "Support",
   "menu_support_love_app": ":heart: Vous aimez l'application ?",
   "menu_support_contribute": ":technologist: Contribuez-y",
