--- a/language/jp.json
+++ b/language/jp.json
@@ -19,10 +19,13 @@
   "info_need_help": "ヘルプが必要ですか？",
   "info_create_poll": "投票を作成する",
   "info_command_source": ":information_source:",
+  "info_command_source_text": "この投票を作成するためのコマンド：",
   "info_others_add_choice": "別の選択肢を追加する...",
   "info_others_add_choice_hint": "ここに新しい選択肢を入力してください",
   "btn_vote": "投票する",
   "btn_add_choice": "+ 選択肢を追加する",
+  "btn_ok": "OK",
+  "btn_close": "閉じる",
   "btn_create": "作成する",
   "btn_cancel": "キャンセル",
   "menu_text": "メニュー",
@@ -35,6 +38,7 @@
   "menu_poll_action": "投票アクション",
   "menu_user_action": "ユーザーアクション",
   "menu_user_self_vote": "自分の投票を見る",
+  "menu_command_info": "Command Info.",
   "menu_support": "サポート",
   "menu_support_love_app": ":heart: このアプリが好きですか？",
   "menu_support_contribute": ":technologist: コントリビュートしてください",
