--- a/language/ru.json
+++ b/language/ru.json
@@ -19,10 +19,13 @@
   "info_need_help": "Нужна помощь?",
   "info_create_poll": "Создать опрос",
   "info_command_source": ":information_source:",
+  "info_command_source_text": "Команда для создания этого опроса:",
   "info_others_add_choice": "Добавить еще вариант...",
   "info_others_add_choice_hint": "Введите новый вариант здесь",
   "btn_vote": "Проголосовать",
   "btn_add_choice": "+ Добавить вариант",
+  "btn_ok": "OK",
+  "btn_close": "Закрыть",
   "btn_create": "Создать",
   "btn_cancel": "Отменить",
   "menu_text": "Меню",
