--- a/language/th.json
+++ b/language/th.json
@@ -19,10 +19,13 @@
   "info_need_help": "Need help ?",
   "info_create_poll": "สร้างคำถามใหม่",
   "info_command_source": ":information_source:",
+  "info_command_source_text": "คำสั่งสำหรับสร้างคำถามนี้:",
   "info_others_add_choice": "เพื่มตัวเลือก...",
   "info_others_add_choice_hint": "พิมพ์ตัวเลือกที่จะเพิ่มและกด Enter...",
   "btn_vote": "เลือก",
   "btn_add_choice": "+ เพื่มคำตอบ",
+  "btn_ok": "OK",
+  "btn_close": "ปิด",
   "btn_create": "Create(สร้าง)",
   "btn_cancel": "Cancel(ยกเลิก)",
   "menu_text": "Menu(สำหรับคนถาม)",
@@ -35,6 +38,7 @@
   "menu_poll_action": "Poll actions",
   "menu_user_action": "User actions",
   "menu_user_self_vote": "ดูผลโหวดของตัวเอง",
+  "menu_command_info": "Command Info.",
   "menu_support": "Support",
   "menu_support_love_app": ":heart: You love the app ?",
   "menu_support_contribute": ":technologist: Contribute on it",
