--- a/language/zh_cn.json
+++ b/language/zh_cn.json
@@ -19,10 +19,13 @@
   "info_need_help": "需要帮助吗？",
   "info_create_poll": "创建一个投票",
   "info_command_source": ":information_source:",
+  "info_command_source_text": "创建此投票的命令：",
   "info_others_add_choice": "添加另一个选项...",
   "info_others_add_choice_hint": "在此输入新选项",
   "btn_vote": "投票",
   "btn_add_choice": "+ 添加选项",
+  "btn_ok": "OK",
+  "btn_close": "关闭",
   "btn_create": "创建",
   "btn_cancel": "取消",
   "menu_text": "菜单",
@@ -35,6 +38,7 @@
   "menu_poll_action": "投票操作",
   "menu_user_action": "用户操作",
   "menu_user_self_vote": "查看您的投票结果",
+  "menu_command_info": "Command Info.",
   "menu_support": "支持",
   "menu_support_love_app": ":heart: 您喜欢这个应用吗？",
   "menu_support_contribute": ":technologist: 参与开发",
