--- a/language/zh_tw.json
+++ b/language/zh_tw.json
@@ -19,10 +19,13 @@
   "info_need_help": "需要幫助嗎？",
   "info_create_poll": "創建一個投票",
   "info_command_source": ":information_source:",
+  "info_command_source_text": "建立此投票的指令：",
   "info_others_add_choice": "添加另一個選項...",
   "info_others_add_choice_hint": "在此輸入新選項",
   "btn_vote": "投票",
   "btn_add_choice": "+ 添加選項",
+  "btn_ok": "OK",
+  "btn_close": "關閉",
   "btn_create": "創建",
   "btn_cancel": "取消",
   "menu_text": "菜單",
@@ -35,6 +38,7 @@
   "menu_poll_action": "投票操作",
   "menu_user_action": "用戶操作",
   "menu_user_self_vote": "查看您的投票結果",
+  "menu_command_info": "Command Info.",
   "menu_support": "支持",
   "menu_support_love_app": ":heart: 您喜歡這個應用嗎？",
   "menu_support_contribute": ":technologist: 參與開發",
