--- a/language/th.json
+++ b/language/th.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: ถามโดย <@{{user_id}}>",
   "info_addon": "(มือถือกด View Full Message ถ้าเห็นตัวเลือกไม่ครบ)",
   "info_all_user_vote": "ผลโหวดทั้งหมด",
-  "info_need_help": "Need help ?",
+  "info_need_help": "ต้องการความช่วยเหลือ ?",
   "info_create_poll": "สร้างคำถามใหม่",
   "info_command_source": ":information_source:",
   "info_command_source_text": "คำสั่งสำหรับสร้างคำถามนี้:",
