--- a/language/en.json
+++ b/language/en.json
@@ -52,11 +52,11 @@
   "modal_option_anonymous": "*Anonymous*",
   "modal_option_anonymous_hint": "*This option makes your poll anonymous*",
   "modal_option_limited": "*Limited*",
-  "modal_option_limited_hint": "*This option limit the number of choices by user*",
+  "modal_option_limited_hint": "*This option limits the number of choices per user*",
   "modal_option_hidden": "*Hidden*",
-  "modal_option_hidden_hint": "*This option hide the votes until reveal*",
+  "modal_option_hidden_hint": "*This option hides the votes until revealed*",
   "modal_option_add_choice": "*Allow choices from others*",
-  "modal_option_add_choice_hint": "This option allow other member to add more choice to this poll.",
+  "modal_option_add_choice_hint": "This option allows other members to add more choices to this poll.",
   "modal_input_limit_text": "Choose your limit (Please enable *Limited* first)",
   "modal_input_limit_hint": "Type a number",
   "modal_input_question_text": "Ask your question :",
@@ -64,10 +64,10 @@
   "modal_input_choice_text": "*Create your choice :*",
   "modal_input_choice_add": "+ Add a choice",
   "modal_input_choice": "Write your choice",
-  "modal_ch_manual_select": "Select a channel to post poll",
+  "modal_ch_manual_select": "Select a channel to post the poll",
   "modal_ch_select": "Select a channel",
   "modal_ch_response_url": "response_url :",
-  "modal_ch_response_url_auto": "Poll will be posted to current channel",
+  "modal_ch_response_url_auto": "The poll will be posted to the current channel",
   "modal_ch_response_url_hint": ":warning: Please DO NOT change text above :warning:\nPoll will be posted to current channel.",
   "modal_ch_warn": ":warning: Some of channels may not be visible to the bot. This may result by impossibility to create the poll.",
   "modal_ch_warn_with_response_url": ":warning: Some of channels may not be visible to the bot. This may result by impossibility to create the poll. \nOr just type /{{slack_command}} in the channel that you want to post poll so @{{bot_name}} can create poll for you in any channel",
