Adjust contact point string as Slack App Directory required me to add email not just GitHub URL

--- a/language/de.json
+++ b/language/de.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: von <@{{user_id}}>",
   "info_addon": "",
   "info_all_user_vote": "Stimmen aller Benutzer",
-  "info_need_help": "Brauchen Sie Hilfe?",
+  "info_need_help": "Brauchen Sie Hilfe? | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "info_create_poll": "Eine Umfrage erstellen",
   "info_command_source": ":information_source:",
   "info_command_source_text": "Befehl zum Erstellen dieser Umfrage:",
@@ -40,13 +40,13 @@
   "menu_user_self_vote": "Ihre Stimmen anzeigen",
   "menu_command_info": "Command Info.",
   "menu_support": "Unterstützung",
-  "menu_support_love_app": ":heart: Sie lieben die App?",
+  "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: Beitrag dazu leisten",
   "menu_support_source": "Github öffnen",
   "menu_support_me": ":coffee: Kaufe mir einen Kaffee, um mir bei der Wartung der Server zu helfen oder einfach nur zu danken",
   "menu_support_me_buy_coffee": "Kaffee kaufen",
   "menu_support_open_poll": "Open Poll unterstützen",
-  "menu_love_open_poll": "Lieben Sie Open Poll?",
+  "menu_support_contact": "Support und Kontakt",
   "modal_create_poll": "Erstellen Sie eine Umfrage, indem Sie das folgende Formular ausfüllen",
   "modal_option": "Wählen Sie die Optionen Ihrer Umfrage aus",
   "modal_option_anonymous": "*Anónimo*",
