--- a/language/es.json
+++ b/language/es.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: por <@{{user_id}}>",
   "info_addon": "",
   "info_all_user_vote": "Votos de todos los usuarios",
-  "info_need_help": "¿Necesitas ayuda?",
+  "info_need_help": "¿Necesitas ayuda? | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "info_create_poll": "Crear una encuesta",
   "info_command_source": ":information_source:",
   "info_command_source_text": "Comando para crear esta encuesta:",
@@ -40,13 +40,13 @@
   "menu_user_self_vote": "Ver tus votos",
   "menu_command_info": "Command Info.",
   "menu_support": "Apoyo",
-  "menu_support_love_app": ":heart: ¿Te encanta la aplicación?",
+  "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: Contribuir en ello",
   "menu_support_source": "Abrir Github",
   "menu_support_me": ":coffee: Comprame un café para ayudarme a mantener los servidores o simplemente agradecerme",
   "menu_support_me_buy_coffee": "Comprar un café",
   "menu_support_open_poll": "Apoyar a Open Poll",
-  "menu_love_open_poll": "¿Te encanta Open Poll?",
+  "menu_support_contact": "Soporte y contacto",
   "modal_create_poll": "Crea una encuesta rellenando el siguiente formulario",
   "modal_option": "Elige las opciones de tu encuesta",
   "modal_option_anonymous": "*Anonym*",
