--- a/language/fi.json
+++ b/language/fi.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: luoja <@{{user_id}}>",
   "info_addon": "",
   "info_all_user_vote": "Käyttäjien äänet",
-  "info_need_help": "Tarvitsetko apua?",
+  "info_need_help": "Tarvitsetko apua? | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "info_create_poll": "Luo kysely",
   "info_command_source": ":information_source:",
   "info_command_source_text": "Komento tämän kyselyn luomiseksi:",
@@ -40,13 +40,13 @@
   "menu_user_self_vote": "Näytä omat äänesi",
   "menu_command_info": "Komentojen tiedot",
   "menu_support": "Tuki",
-  "menu_support_love_app": ":heart: Pidätkö sovelluksesta?",
+  "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: Osallistu sen kehittämiseen",
   "menu_support_source": "Avoin lähdekoodi Githubissa",
   "menu_support_me": ":coffee: Osta minulle kahvi auttaaksesi minua ylläpitämään palvelimia tai vain kiittääksesi minua",
   "menu_support_me_buy_coffee": "Osta kahvi",
   "menu_support_open_poll": "Tukea Open Pollia",
-  "menu_love_open_poll": "Pidätkö Open Pollista?",
+  "menu_support_contact": "Tuki ja yhteydenotto",
   "modal_create_poll": "Luo kysely täyttämällä seuraava lomake",
   "modal_option": "Valitse kyselysi vaihtoehdot",
   "modal_option_anonymous": "*Nimetön*",
