--- a/language/fr.json
+++ b/language/fr.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: par <@{{user_id}}>",
   "info_addon": "",
   "info_all_user_vote": "Votes des utilisateurs",
-  "info_need_help": "Besoin d'aide ?",
+  "info_need_help": "Besoin d'aide ? | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "info_create_poll": "Créer un sondage",
   "info_command_source": ":information_source:",
   "info_command_source_text": "Commande pour créer ce sondage:",
@@ -40,13 +40,13 @@
   "menu_user_self_vote": "Voir vos votes",
   "menu_command_info": "Command Info.",
   "menu_support": "Support",
-  "menu_support_love_app": ":heart: Vous aimez l'application ?",
+  "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: Contribuez-y",
   "menu_support_source": "Github ouvert",
   "menu_support_me": ":coffee: Offrez-moi un café pour m'aider à maintenir les serveurs ou simplement me remercier",
   "menu_support_me_buy_coffee": "Acheter un café",
   "menu_support_open_poll": "Soutenir Open Poll",
-  "menu_love_open_poll": "Vous aimez Open Poll ?",
+  "menu_support_contact": "Assistance et contact",
   "modal_create_poll": "Créer un sondage en remplissant le formulaire suivant",
   "modal_option": "Choisissez les options de votre sondage",
   "modal_option_anonymous": "*Anonyme*",
