--- a/language/jp.json
+++ b/language/jp.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: <@{{user_id}}> による",
   "info_addon": "",
   "info_all_user_vote": "ユーザーの投票",
-  "info_need_help": "ヘルプが必要ですか？",
+  "info_need_help": "ヘルプが必要ですか？ | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "info_create_poll": "投票を作成する",
   "info_command_source": ":information_source:",
   "info_command_source_text": "この投票を作成するためのコマンド：",
@@ -40,13 +40,13 @@
   "menu_user_self_vote": "自分の投票を見る",
   "menu_command_info": "Command Info.",
   "menu_support": "サポート",
-  "menu_support_love_app": ":heart: このアプリが好きですか？",
+  "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: コントリビュートしてください",
   "menu_support_source": "Githubを開く",
   "menu_support_me": ":coffee: サーバーのメンテナンスやお礼にコーヒーを買ってください",
   "menu_support_me_buy_coffee": "コーヒーを買う",
   "menu_support_open_poll": "Open Pollをサポートする",
-  "menu_love_open_poll": "Open Pollを愛していますか？",
+  "menu_support_contact": "サポート＆コンタクト",
   "modal_create_poll": "以下のフォームに入力して投票を作成する",
   "modal_option": "投票のオプションを選択してください",
   "modal_option_anonymous": "*匿名*",
