--- a/language/kr.json
+++ b/language/kr.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: <@{{user_id}}>이(가) 만듦",
   "info_addon": "",
   "info_all_user_vote": "모든 사용자 투표",
-  "info_need_help": "도움이 필요하세요?",
+  "info_need_help": "도움이 필요하세요? | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "info_create_poll": "투표 생성",
   "info_command_source": ":information_source:",
   "info_others_add_choice": "다른 선택지 추가하기...",
@@ -36,13 +36,13 @@
   "menu_user_action": "사용자 작업",
   "menu_user_self_vote": "나의 투표 보기",
   "menu_support": "지원",
-  "menu_support_love_app": ":heart: 앱을 좋아하시나요?",
+  "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: 기여하기",
   "menu_support_source": "Github 열기",
   "menu_support_me": ":coffee: 서버 유지 또는 감사를 위해 커피를 사주세요",
   "menu_support_me_buy_coffee": "커피 사기",
   "menu_support_open_poll": "Open Poll 지원하기",
-  "menu_love_open_poll": "Open Poll을 좋아하시나요?",
+  "menu_support_contact": "지원 및 연락처",
   "modal_create_poll": "다음 양식을 작성하여 투표를 만드세요",
   "modal_option": "투표 옵션 선택",
   "modal_option_anonymous": "*익명*",
