--- a/language/ru.json
+++ b/language/ru.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: от <@{{user_id}}>",
   "info_addon": "",
   "info_all_user_vote": "Голоса всех пользователей",
-  "info_need_help": "Нужна помощь?",
+  "info_need_help": "Нужна помощь? | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "info_create_poll": "Создать опрос",
   "info_command_source": ":information_source:",
   "info_command_source_text": "Команда для создания этого опроса:",
@@ -39,13 +39,13 @@
   "menu_user_action": "Действия пользователя",
   "menu_user_self_vote": "Посмотреть свои голоса",
   "menu_support": "Поддержка",
-  "menu_support_love_app": ":heart: Вам нравится приложение?",
+  "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: Внести свой вклад",
   "menu_support_source": "Открыть Github",
   "menu_support_me": ":coffee: Купите мне кофе, чтобы помочь мне поддерживать серверы или просто поблагодарить меня",
   "menu_support_me_buy_coffee": "Купить кофе",
   "menu_support_open_poll": "Поддержать Open Poll",
-  "menu_love_open_poll": "Любите Open Poll?",
+  "menu_support_contact": "Поддержка и контакты",
   "modal_create_poll": "Создайте опрос, заполнив следующую форму",
   "modal_option": "Выберите параметры вашего опроса",
   "modal_option_anonymous": "*Анонимный*",
