--- a/language/zh_cn.json
+++ b/language/zh_cn.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: 由 <@{{user_id}}> 创建",
   "info_addon": "",
   "info_all_user_vote": "用户投票结果",
-  "info_need_help": "需要帮助吗？",
+  "info_need_help": "需要帮助吗？ | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "info_create_poll": "创建一个投票",
   "info_command_source": ":information_source:",
   "info_command_source_text": "创建此投票的命令：",
@@ -39,14 +39,13 @@
   "menu_user_action": "用户操作",
   "menu_user_self_vote": "查看您的投票结果",
   "menu_command_info": "Command Info.",
-  "menu_support": "支持",
-  "menu_support_love_app": ":heart: 您喜欢这个应用吗？",
+  "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: 参与开发",
   "menu_support_source": "开源代码(Github)",
   "menu_support_me": ":coffee: 请我喝杯咖啡以帮助我维护服务器或仅仅感谢我",
   "menu_support_me_buy_coffee": "购买咖啡",
   "menu_support_open_poll": "支持 Open Poll",
-  "menu_love_open_poll": "喜欢 Open Poll 吗？",
+  "menu_support_contact": "支持与联系",
   "modal_create_poll": "通过填写以下表格创建投票",
   "modal_option": "选择您的投票选项",
   "modal_option_anonymous": "匿名",
