--- a/language/zh_tw.json
+++ b/language/zh_tw.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: 由 <@{{user_id}}> 創建",
   "info_addon": "",
   "info_all_user_vote": "用戶投票結果",
-  "info_need_help": "需要幫助嗎？",
+  "info_need_help": "需要幫助嗎？ | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "info_create_poll": "創建一個投票",
   "info_command_source": ":information_source:",
   "info_command_source_text": "建立此投票的指令：",
@@ -40,13 +40,13 @@
   "menu_user_self_vote": "查看您的投票結果",
   "menu_command_info": "Command Info.",
   "menu_support": "支持",
-  "menu_support_love_app": ":heart: 您喜歡這個應用嗎？",
+  "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: 參與開發",
   "menu_support_source": "開源代碼(Github)",
   "menu_support_me": ":coffee: 請我喝杯咖啡以幫助我維護服務器或僅僅感謝我",
   "menu_support_me_buy_coffee": "購買咖啡",
   "menu_support_open_poll": "支持 Open Poll",
-  "menu_love_open_poll": "喜歡 Open Poll 嗎？",
+  "menu_support_contact": "支援與聯絡",
   "modal_create_poll": "通過填寫以下表格創建投票",
   "modal_option": "選擇您的投票選項",
   "modal_option_anonymous": "匿名",
