--- a/language/en.json
+++ b/language/en.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: by <@{{user_id}}>",
   "info_addon": "",
   "info_all_user_vote": "Users votes",
-  "info_need_help": "Need help ?",
+  "info_need_help": "Need help ? | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "info_create_poll": "Create a poll",
   "info_command_source": ":information_source:",
   "info_command_source_text": "Command to create this poll:",
@@ -40,13 +40,13 @@
   "menu_user_self_vote": "See your votes",
   "menu_command_info": "Command Info.",
   "menu_support": "Support",
-  "menu_support_love_app": ":heart: You love the app ?",
+  "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: Contribute on it",
   "menu_support_source": "Open Github",
   "menu_support_me": ":coffee: Buy me a coffee to help me to maintain servers or just thanks me",
   "menu_support_me_buy_coffee": "Buy a coffee",
   "menu_support_open_poll": "Support Open Poll",
-  "menu_love_open_poll": "Love Open Poll ?",
+  "menu_support_contact": "Support & Contact",
   "modal_create_poll": "Create a poll by filling the following form",
   "modal_option": "Choose your poll's options",
   "modal_option_anonymous": "*Anonymous*",
