--- a/language/th.json
+++ b/language/th.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: ถามโดย <@{{user_id}}>",
   "info_addon": "(มือถือกด View Full Message ถ้าเห็นตัวเลือกไม่ครบ)",
   "info_all_user_vote": "ผลโหวดทั้งหมด",
-  "info_need_help": "ต้องการความช่วยเหลือ ?",
+  "info_need_help": "Need help ? | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "info_create_poll": "สร้างคำถามใหม่",
   "info_command_source": ":information_source:",
   "info_command_source_text": "คำสั่งสำหรับสร้างคำถามนี้:",
@@ -40,13 +40,13 @@
   "menu_user_self_vote": "ดูผลโหวดของตัวเอง",
   "menu_command_info": "Command Info.",
   "menu_support": "Support",
-  "menu_support_love_app": ":heart: You love the app ?",
+  "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: Contribute on it",
   "menu_support_source": "Open Github",
   "menu_support_me": ":coffee: Buy me a coffee to help me to maintain servers or just thanks me",
   "menu_support_me_buy_coffee": "Buy a coffee",
   "menu_support_open_poll": "Support Open Poll",
-  "menu_love_open_poll": "Love Open Poll ?",
+  "menu_support_contact": "Love Open Poll ?",
   "modal_create_poll": "กรุณาใส่ข้อมูลด้านล่างเพื่อสร้างคำถามใหม่:",
   "modal_option": "ตัวเลือก:",
   "modal_option_anonymous": "*Anonymous* (ไม่ระบุตัวตน)",
