--- a/language/ru.json
+++ b/language/ru.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: от <@{{user_id}}>",
   "info_addon": "",
   "info_all_user_vote": "Голоса всех пользователей",
-  "info_need_help": "Нужна помощь? | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
+  "info_need_help": "Нужна помощь? | <mailto:{{email}}|E-Mail> | <{{link}}|URL>\nЕсли есть неправильный перевод, сообщите нам, мы исправим его для вас!",
   "info_create_poll": "Создать опрос",
   "info_command_source": ":information_source:",
   "info_command_source_text": "Команда для создания этого опроса:",
