--- a/language/zh_cn.json
+++ b/language/zh_cn.json
@@ -16,7 +16,7 @@
   "info_by": ":writing_hand: 由 <@{{user_id}}> 创建",
   "info_addon": "",
   "info_all_user_vote": "用户投票结果",
-  "info_need_help": "需要帮助吗？ | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
+  "info_need_help": "需要帮助吗？ | <mailto:{{email}}|E-Mail> | <{{link}}|URL>\n网址>\\n请报告任何错误的翻译，我们将为您进行修正！",
   "info_create_poll": "创建一个投票",
   "info_command_source": ":information_source:",
   "info_command_source_text": "创建此投票的命令：",
