--- a/language/en.json
+++ b/language/en.json
@@ -74,6 +74,10 @@
   "modal_ch_via_cmd_only": ":warning: Please type type /{{slack_command}} in the channel that you want to post poll then press enter.",
   "modal_bot_not_in_ch": ":x::x::x:\nBot not in selected channel please close this dialog and add @{{bot_name}} to that channel first \nor just type /{{slack_command}} in channel that you want to create this poll\n:x::x::x:",
   "modal_bot_in_ch": ":white_check_mark: You can create poll in this channel",
+  "task_scheduled": "Poll ID: {{poll_id}}\nscheduled on {{ts}}",
+  "task_scheduled_with_cron": "(Cron: {{cron}})",
+  "task_error_poll_id_invalid": "Invalid Poll ID",
+  "task_error_date_invalid": "Datetime should be in ISO8601 Format",
   "err_change_vote_poll_closed": "You can't change your votes on closed poll.",
   "err_not_voted": "You have not voted yet",
   "err_close_other": "You can't close poll from another user.",
