Recurring poll feature (POS,WIP)

--- a/language/en.json
+++ b/language/en.json
@@ -74,12 +74,16 @@
   "modal_ch_via_cmd_only": ":warning: Please type type /{{slack_command}} in the channel that you want to post poll then press enter.",
   "modal_bot_not_in_ch": ":x::x::x:\nBot not in selected channel please close this dialog and add @{{bot_name}} to that channel first \nor just type /{{slack_command}} in channel that you want to create this poll\n:x::x::x:",
   "modal_bot_in_ch": ":white_check_mark: You can create poll in this channel",
-  "task_scheduled": "Poll ID: {{poll_id}}\nscheduled on {{ts}}",
-  "task_scheduled_with_cron": "(Cron: {{cron}})",
+  "task_list": "Found `{{poll_count}}` schedule(s).",
+  "task_delete": "Poll ID: `{{poll_id}}`\n `{{deleted_count}}` schedule(s) deleted.",
+  "task_scheduled": "Poll ID: `{{poll_id}}`\nscheduled on `{{ts}}`.\nNOTE: THIS IS WIP/TESTING Feature!",
+  "task_scheduled_with_cron": "Recurring poll: enabled (Cron: `{{cron}}`)\n:warning: Please note that recurring poll is NOT guarantee in this server in case of server get update and it not compatable with previous version of recurring task.",
+  "task_error_command_invalid": "Invalid command, Usage:\n`/{{slack_command}} schedule create [poll_id] [TS] [CH_ID] [CRON_EXP]`\n`/{{slack_command}} schedule delete [poll_id]`",
   "task_error_poll_id_invalid": "Invalid Poll ID",
-  "task_error_date_invalid": "Datetime should be in ISO8601 Format",
+  "task_error_date_invalid": "Datetime should be in ISO8601 Format `YYYY-MM-DDTHH:mm:ss.sssZ`",
   "err_change_vote_poll_closed": "You can't change your votes on closed poll.",
   "err_not_voted": "You have not voted yet",
+  "err_action_other": "You can't do this because you are not owner of this poll.",
   "err_close_other": "You can't close poll from another user.",
   "err_delete_other": "You can't delete poll from another user.",
   "err_reveal_other": "You can't reveal poll from another user.",
