Schedule/Recurring Poll (Beta)

--- a/language/en.json
+++ b/language/en.json
@@ -76,11 +76,13 @@
   "modal_bot_in_ch": ":white_check_mark: You can create poll in this channel",
   "task_list": "Found `{{poll_count}}` schedule(s).",
   "task_delete": "Poll ID: `{{poll_id}}`\n `{{deleted_count}}` schedule(s) deleted.",
-  "task_scheduled": "Poll ID: `{{poll_id}}`\nscheduled on `{{ts}}`.\nNOTE: THIS IS WIP/TESTING Feature!",
+  "task_scheduled": "Poll ID: `{{poll_id}}`\nScheduled on: `{{ts}}`\nOverride CH: `{{poll_ch}}`\nCron Expression:: `{{cron_string}}`\nMax run count: `{{run_max}}`\nNOTE: THIS IS BETA Feature!",
   "task_scheduled_with_cron": "Recurring poll: enabled (Cron: `{{cron}}`)\n:warning: Please note that recurring poll is NOT guarantee in this server in case of server get update and it not compatable with previous version of recurring task.",
-  "task_error_command_invalid": "Invalid command, Usage:\n`/{{slack_command}} schedule create [poll_id] [TS] [CH_ID] [CRON_EXP]`\n`/{{slack_command}} schedule delete [poll_id]`",
+  "task_error_command_invalid": "Invalid command, Usage:\n`/{{slack_command}} schedule create [POLL_ID] [TS] [CH_ID] \"[CRON_EXP]\" [MAX_RUN]`\n`/{{slack_command}} schedule delete [POLL_ID]`\nFor help:`/{{slack_command}} help`",
   "task_error_poll_id_invalid": "Invalid Poll ID",
   "task_error_date_invalid": "Datetime should be in ISO8601 Format `YYYY-MM-DDTHH:mm:ss.sssZ`",
+  "err_para_missing": "Required parameter `{{parameter}}` is missing.",
+  "err_para_invalid": "Value `{{value}}` for parameter `{{parameter}}` is invalid.{{error_msg}}",
   "err_change_vote_poll_closed": "You can't change your votes on closed poll.",
   "err_not_voted": "You have not voted yet",
   "err_action_other": "You can't do this because you are not owner of this poll.",
